			   XPCE ChangeLog
			   ==============

VERSION 5.1.11, distributed with SWI-Prolog 4.1.0
=================================================

* ADDED: PceEmacs: ->pce_define_class as new command to the Prolog mode
  First of more to come.

* ADDED: prolog_navigator/1 toplevel predicate.  Fixed module inclusion
  to make debugsettings work without PceEmacs or the GuiTracer loaded.
  Bound Prolog Navigator to Control-C Control-N in PceEmacs.

* FIXED: PceEmacs LaTeX mode: avoid loop looking for environment.

* PORT: Win32: Upgraded jpeg-support libraries to version 6b, providing
  full compatibility with the current Unix/X11 versions.

* ADDED: PceEmacs: add file-pattern to Prolog mode for user-choosen
  extension (.pro on Windows).

* FIXED: ->free bitmap on ->unlink of associated image.

* FIXED: `image->save' cache errors handling the associated XImage.

* ADDED: Class image: support for loading and saving the JPEG_COM markers
  associating comments with JPEG files.  See `image->load' and `image->save'.

* ADDED: PceEmacs: show accelerators in menu-bar in human-readable form.

* ADDED: PceEmacs: show current line-number in status window.

* FIXED: PceEmacs: various dangling issues around using GNU emacs tag-tables.

* ADDED: library(pce_type) providing pce_define_type/2 for defining your own
  types.

* FIXED: Win32: `file->exists' succeeded on directories, where this is only
  supposed to be the case if the optional must_be_file argument is @off.

* FIXED: avoid domain error on random/1 in the manual object-inspector tool.

* FIXED: Many issues to subwindow layout handling for the user.  Added new
  class tile_adjuster for this purpose.

* FIXED: Proper handling of class-variable inheritence for class-variables
  associated with normal variables.

* ADDED: `stream ->input_message' to check whether the stream is already
  open and then attach asynchronous input handling.


VERSION 5.1.10, distributed with SWI-Prolog 4.0.11